create-initial-gateway-and-vs-for-http/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: whereami-gateway
  namespace: asm-ingress
spec:
  selector:
    asm: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: edge2mesh-credential
