create-initial-gateway-and-vs-for-http/whereami-http-vs-basic.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whereami-http-vs
  namespace: whereami-http
  #namespace: asm-ingress
spec:
  gateways:
  - asm-ingress/whereami-gateway
  hosts:
  - 'frontend.endpoints.mc-e2m-01.cloud.goog'
  http:
  - route:
    - destination:
        host: whereami-http.whereami-http.svc.cluster.local
        port:
          number: 80
